исправлены баги checker и tumakova/task1_loader

--- a/app/templates/test.html
+++ b/app/templates/test.html
@@ -52,7 +52,10 @@
                                        alert('Ответ успешно отправлен');
                                     }
                                  },
-                                 error: (err) => { alert(err.responseJSON); }
+                                 error: (err) => {
+                                    if (err.responseJSON != undefined) { alert(err.responseJSON); }
+                                    else { alert('Сервер не отвечает...'); }
+                                 }
                               });
                            }
                         </script>
