добавлена генерация рк2 и кнопка доср. завершения

--- a/app/templates/test.html
+++ b/app/templates/test.html
@@ -66,6 +66,27 @@
          </div>
       </div>
       {% endfor %}
+      <row class="row justify-content-center">
+         <button id="finish">Завершить</button>
+         <script>
+            $(document).ready(() => {
+               $('#finish').click(() => {
+                  $.ajax({
+                     type: "POST",
+                     url: $(location).attr('href'),
+                     data: JSON.stringify({
+                        "status": "finish"
+                     }),
+                     success: (response) => { alert('Рубежный контроль окончен. Можно закрыть страницу...'); },
+                     error: (err) => {
+                        if (err.responseJSON != undefined) { alert(err.responseJSON); }
+                        else { alert('Сервер не отвечает...'); }
+                     }
+                  });
+               });
+            });
+         </script>
+      </row>
    </row>
    <script>
       $(document).ready(() => {
