--- a/app/templates/auth_form.html
+++ b/app/templates/auth_form.html
@@ -44,6 +44,14 @@
         </div>
         <div class="row">
           <div class="col-sm">
+            {{ form.email.label }}
+          </div>
+          <div class="col-sm">
+            {{ form.email }}
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm">
             {{ form.group.label }}
           </div>
           <div class="col-sm">
